# ChineseChess

./: .gitignore  LICENSE  README.md  TODO.md
bit_src/: CMakeLists.txt  base.hpp  bitboard.cpp  bitboard.hpp  evaluate.hpp  experiment.hpp  genMove.hpp  main.cpp  position.cpp  position.hpp
cbf_convert/: get_data.py
eva_verify/: CMakeLists.txt  base.h  base2.h  book.h  eleeye.cpp  evaluate.cpp  genmoves.cpp  hash.cpp  hash.h  movesort.cpp  movesort.h  parse.h  position.cpp  position.h  preeval.cpp  pregen.cpp  pregen.h  rc4prng.h  search.cpp  search.h  ucci.cpp  ucci.h
get_prob_para/: get_prob_para.py
linear/: get_data.py  model.py  pop_param.py  train.py
linear/models/: model_31__132.pkl  model_42.pkl  model_5__168.pkl
linear/para/: layer_1_bias.txt  layer_2_bias.txt  layer_2_weight.txt
src/: CMakeLists.txt  base.hpp  board.hpp  cache.hpp  calculateScore.hpp  defines.hpp  evaluate.hpp  experiment.hpp  genMove.hpp  main.cpp  nnue.hpp  pipe.hpp  position.hpp  preGenMove.hpp  search.hpp  status.hpp  utils.hpp
ui/: ui.py
